--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -139,12 +139,20 @@ body {
 }
 
 .map-container {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 
 .map-container .maplibregl-canvas {
   outline: none;
+}
+
+.maplibregl-ctrl-top-right {
+  top: 4rem;
 }
 
 .map-overlay {
